@@ -1,3 +1,8 @@
+* Thu Sep 13 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 5.0.7-0
+- Added support for Puppet 5 and OEL
+- Modified uspec template to handle the RedHat OS family instead of just RHEL
+  or CentOS
+
 * Fri Aug 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.7-0
 - Replaced all references to 'sudosh' with 'su' to reduce future confusion as
   we move away from using sudosh.
